test/compile-fail/resolution/type-existence/no-such-trait/expected.txt
error: unresolved trait `b`
 --> top.rhdl:1:12
  |
1 | struct a<T: b> {}
  |             ^ no `b` trait
